--- a/BlazorTool/wwwroot/app.css
+++ b/BlazorTool/wwwroot/app.css
@@ -1,4 +1,4 @@
-html, body {
+﻿html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
@@ -102,3 +102,4 @@ h1:focus {
         .warning-popup .k-button:hover {
             /* background-color: #0056b3; */
         }
+
