--- a/BlazorTool.Client/Pages/SchedulerPage.razor.css
+++ b/BlazorTool.Client/Pages/SchedulerPage.razor.css
@@ -1,10 +1,12 @@
 ::deep .month-view-slot {
-    height: 120px;
+    height: 150px;
     /* Use flexbox to control alignment */
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* Align children to the top-left */
-    padding: 3px; /* Reduce padding for the entire cell */
+    padding: 2px; /* Reduce padding for the entire cell */
+    padding-block: 1px !important;
+    padding-inline: 3px !important;
 }
 
 ::deep .current-day {
@@ -12,7 +14,7 @@
 }
 
 ::deep .weekend-day {
-    background-color: #f5f5f5;
+    background-color: #bbc4c8;
 }
 
 /* Target the day number link */
@@ -24,8 +26,20 @@
     width: auto;
     
     /* Add border and padding */
-    padding: 2px 5px;
-    border: 1px solid #e0e0e0;
+    padding: 0px 2px;
+    border: 2px solid #e0e0e0;
     border-radius: 4px;
-    margin-bottom: 4px; /* Add some space below the date */
+    margin-bottom: 1px; /* Add some space below the date */
 }
+
+.item-MonthView{
+
+}
+
+.item-WeekView {
+    padding:2px;
+}
+
+.item-DayView {
+    padding: 5px;
+}   
